--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ margin-top:30px;
     <div class="navbar-nav">
       <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link active" href="#">Programms</a>
-      <a class="nav-item nav-link active" href="#">Education</a>
+      <a class="nav-item nav-link active" href="#education">Education</a>
       <a class="nav-item nav-link active" href="#">Album</a>
     </div>
   </div>
